# advent-of-code-17

./: .gitignore  README.html  README.md  advent-of-code.cabal  adventofcode17.cabal  stack.yaml
adventofcode1701/: adventofcode1701.cabal
adventofcode1701/app/: advent01.hs  advent01.ipynb  advent01verbose.hs
adventofcode1702/: README.md  adventofcode1702.cabal
adventofcode1702/app/: advent02.hs  advent02.ipynb
data/: advent02.txt  infi.txt
problems/: day01.html  day02.html  day03.html  day04.html  day05.html  day06.html  day07.html  day08.html  day09.html  day10.html  day11.html  day12.html  day13.html  day14.html  day15.html  day16.html  day17.html  day18.html  day19.html  day20.html  day21.html  day22.html  day23.html  day24.html  day25-completed.html  day25.html  infi-en.txt  infi.html
src/: Untitled.ipynb
src/advent01/: advent01-Copy1.ipynb  advent01.ipynb
src/advent02/: advent02.ipynb
src/advent03/: advent03.hs  advent03.ipynb
src/advent04/: advent04.hs  advent04.ipynb
src/advent05/: advent05.hs  advent05.ipynb
src/advent06/: advent06.hs  advent06.ipynb
src/advent07/: advent07-Copy1.ipynb  advent07.hs  advent07.ipynb
src/advent08/: advent08.hs  advent08.ipynb
src/advent09/: advent09.hs  advent09.ipynb
src/advent10/: advent10.hs  advent10.ipynb
src/advent11/: advent11.hs  advent11.ipynb
src/advent12/: advent12.hs  advent12.ipynb
src/advent13/: advent13.hs  advent13.ipynb
src/advent14/: advent14.hs  advent14.ipynb  advent14serial.hs
src/advent15/: advent15.hs  advent15.ipynb  advent15other.hs
src/advent16/: advent16.hs  advent16.ipynb
src/advent17/: advent17.hs  advent17.ipynb  advent17leaky.hs
src/advent18/: Advent18Parser.hs  advent18a.hs  advent18a.ipynb  advent18b.hs  advent18b.ipynb  advent18concurrent.hs
src/advent19/: advent19.hs  advent19.ipynb
src/advent20/: advent20.hs  advent20.ipynb
src/advent21/: advent21.hs  advent21.ipynb  advent21parallel.hs
src/advent22/: advent22a.hs  advent22a.ipynb  advent22b.hs  advent22b.ipynb  advent22bh.hs
src/advent23/: advent23.hs  advent23.ipynb
src/advent24/: advent24.hs  advent24.ipynb
src/advent25/: advent25.hs  advent25.ipynb
src/infi/: infi.hs  infi.ipynb
