name:                advent-of-code
version:             17.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/neilnjae/advent-of-code-17#readme
license:             BSD3
license-file:        LICENSE
author:              Neil Smith
maintainer:          noone@njae.me.uk
copyright:           2017 Neil Smith
category:            None
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

library
  hs-source-dirs:      src
  build-depends:       base >= 4.7 && < 5
  default-language:    Haskell2010

executable advent01
  hs-source-dirs:      src/advent01
  main-is:             advent01.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , parsec

executable advent01verbose
  hs-source-dirs:      src/advent01
  main-is:             advent01verbose.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , parsec

executable advent02
  hs-source-dirs:      src/advent02
  main-is:             advent02.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , parsec
                     , parsec-numbers
