name:                advent-of-code
version:             17.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/neilnjae/advent-of-code-17#readme
license:             BSD3
license-file:        LICENSE
author:              Neil Smith
maintainer:          noone@njae.me.uk
copyright:           2017 Neil Smith
category:            None
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

library
  hs-source-dirs:      src
  build-depends:       base >= 4.7 && < 5
  default-language:    Haskell2010

executable advent01
  hs-source-dirs:      src/advent01
  main-is:             advent01.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , parsec

executable advent01verbose
  hs-source-dirs:      src/advent01
  main-is:             advent01verbose.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , parsec

executable advent02
  hs-source-dirs:      src/advent02
  main-is:             advent02.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , parsec
                     , parsec-numbers

executable advent03
  hs-source-dirs:      src/advent03
  main-is:             advent03.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , unordered-containers
                     , mtl

executable advent04
  hs-source-dirs:      src/advent04
  main-is:             advent04.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5

executable advent05
  hs-source-dirs:      src/advent05
  main-is:             advent05.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , containers
                     , mtl

executable advent06
  hs-source-dirs:      src/advent06
  main-is:             advent06.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , containers
                     , vector
                     
executable advent07
  hs-source-dirs:      src/advent07
  main-is:             advent07.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , containers
                     , parsec
                     , parsec-numbers
                     
executable advent08
  hs-source-dirs:      src/advent08
  main-is:             advent08.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , containers
                     , parsec
                     , parsec-numbers
                     , containers

executable advent09
  hs-source-dirs:      src/advent09
  main-is:             advent09.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5

executable advent10
  hs-source-dirs:      src/advent10
  main-is:             advent10.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , split

executable advent11
  hs-source-dirs:      src/advent11
  main-is:             advent11.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , split

executable advent12
  hs-source-dirs:      src/advent12
  main-is:             advent12.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , containers
                     , text
                     , megaparsec

executable advent13
  hs-source-dirs:      src/advent13
  main-is:             advent13.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , text
                     , megaparsec

executable advent14
  hs-source-dirs:      src/advent14
  main-is:             advent14.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , split
                     , containers
