name:                adventofcode1702
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/neilnjae/advent-of-code-17#readme
license:             BSD3
license-file:        LICENSE
author:              Neil Smith
maintainer:          noone@njae.me.uk
copyright:           2017 Neil Smith
category:            None
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

library
  hs-source-dirs:      src
  build-depends:       base >= 4.7 && < 5
  default-language:    Haskell2010

executable advent02
  hs-source-dirs:      app
  main-is:             advent02.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , parsec
                     , parsec-numbers
